* lib/srv: attempt to mitigate data races in ServerContext by moving    session behind a mutex  * integration: update tests to be re-entrant. Clean up state after each    test consistetly

--- a/build.assets/Makefile
+++ b/build.assets/Makefile
@@ -146,18 +146,18 @@ clean:
 # Runs tests inside a build container
 #
 .PHONY: test
-test: FLAGS ?= -cover -race -count=1 -timeout=30m
+test: FLAGS ?= -v -cover -race -count=25 -timeout=1h
 test: buildbox
 	docker run \
 		--env TELEPORT_ETCD_TEST="yes" \
 		$(DOCKERFLAGS) $(BCCFLAGS) $(NOROOT) -t $(BUILDBOX) \
 		/bin/bash -c \
-		"examples/etcd/start-etcd.sh & sleep 1; \
+		"examples/etcd/start-etcd.sh && sleep 1; \
 		ssh-agent > external.agent.tmp && source external.agent.tmp; \
-		cd $(SRCDIR) && make TELEPORT_DEBUG=0 FLAGS=\"$(FLAGS)\" clean test"
+		make -C $(SRCDIR) TELEPORT_DEBUG=0 FLAGS=\"$(FLAGS)\" clean test"
 
 .PHONY: integration
-integration: FLAGS ?= -v -cover -count=10 -timeout=1h
+integration: FLAGS ?= -v -cover -count=5 -timeout=1h
 integration: buildbox
 	docker run $(DOCKERFLAGS) $(BCCFLAGS) $(NOROOT) -t $(BUILDBOX) \
 		/bin/bash -c "make -C $(SRCDIR) FLAGS=\"$(FLAGS)\" integration"
