--- a/docs/5.0.yaml
+++ b/docs/5.0.yaml
@@ -51,14 +51,15 @@ nav:
         - Production Guide: production.md
         - FAQ: faq.md
         - Changelog: changelog.md
+    - Preview:
+        - Upcoming Releases: preview/upcoming-releases.md
+        - Database Access: preview/database-access.md
+        - Cloud: preview/cloud.md
     - Infrastructure Guides:
         - AWS: aws-oss-guide.md
         - GCP: gcp-guide.md
         - IBM: ibm-cloud-guide.md
         - OpenSSH Guide: openssh-teleport.md
-    - Preview:
-        - Database Access: preview/database-access.md
-        - Cloud: preview/cloud.md
     - Teleport Enterprise :
         - Introduction: enterprise/introduction.md
         - Quick Start Guide: enterprise/quickstart-enterprise.md
